LOVE MY DEAR COUSIN. MUST MARRY HIM AS SOON AS POSSIBLE

--- a/et3.org
+++ b/et3.org
@@ -2013,15 +2013,20 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 - 这些要找的也找不到。下午家里试着把Component 组件再添加回去试试看 *【不能再添加Component 组件。ET7 框架重构了，小单元也走热更新，在热更新层有天文小行星的生成系。可以参照 ET.pdf 里的服务端 PlayerSystem 来作例子】* ？上午把项目设计的思路，源项目的破源码再读一读理一理，是希望游戏逻辑与游戏界面能够快速开发、项目进展往后移的。
   - User.cs 客户端的话，不知道要不要修改。晚点儿的时候留意一下。
   - Gamer.cs 客户端保留了 Dispose
-- 还有 60 个小错误： protobuf 里还有小问题需要修改。先改了，一次把 Protobuf 里的小错误全部改完了。电脑没好好工作，前后文件不一致。。。。【活宝妹就是一定要嫁给亲爱的表哥！！！】爱表哥，爱生活！！！
+- 还有 79 个小错误： protobuf 里还有小问题需要修改。先改了，一次把 Protobuf 里的小错误全部改完了。电脑没好好工作，前后文件不一致。。。。【活宝妹就是一定要嫁给亲爱的表哥！！！】爱表哥，爱生活！！！
 - 有几个 bug 让自己完全怀疑：电脑坏了，我明明重新生成了 proto2cs 消息，为什么应该会找不到的，它能找到，而应该找到的，它就是找不到？太奇怪了
 - 这里稍微想下：就能明白，因为前面出错了，后面的消息被 block 掉了。所以先去把前面的错误改过来。以后动动脑子，不是重启一下电脑文件系统就能够工作好点儿的！
 - 我明明生成了这些消息，可是它就是找不到。想的话，如果服务端是引用的客户端的代码，那么得把客户端的源码打成 .dll 服务端可能才能够用得到。
-- 现在不知道服务端到底对我作出的这些修改，算是怎么回事。只能耐心把所有的编译错误先全部改完，等能打成相应的包，再去想它为什么就是找不到。活宝妹就是一定要嫁给亲爱的表哥！！    
+- *ETTask-vs-ETVoid*: 框架里有狠多需要改的地方，我今天晚上（会去学校好好学习，今天好了就该重新好好学习了）学校里如何瓣不出来，就明天上午再好好解决一下这个细节问题。
+  - 查网页感觉也查不出什么来。还是用源码帮助理解概念。今天晚上整理一下这一块儿，把这个问题弄明白了。【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】    
+  - 不能把所有基类的 async ETTask 返回参数直接改成 void, 因为框架的顶层应用，服务端或是客户端，当不异步等待结果，如资源包没能下载完成，就接着往下执行，会报空异常。
+- 现在不知道服务端到底对我作出的这些修改，算是怎么回事。只能耐心把所有的编译错误先全部改完，等能打成相应的包，再去想它为什么就是找不到。活宝妹就是一定要嫁给亲爱的表哥！！
+- 上面的那个错误感觉好奇怪。大概一两天前，我只是切换了一个 branch 到 master, 然后再切换回来，它自己服务端的 message 文件夹就好了。感觉狠奇怪。先前编译了好多次它都找不到。
+- 现在的问题是：Protobuf 里 repeated 关键字，好像还是没有处理好，找不到成员变量  Cards. 是因为 Proto2CS 的时候，确实把 repeated 关键字给处理丢了。因为我的 .proto 文件里有错误。
+- HandCardSprite: 不知道这个类是为什么，整了一堆的错误，成为 blocker, 明天上午要把这点儿看懂看明白了
+  - 这个项目Unity.Model 是需要索引 UnityEngine 以及UI 等相关模块人的 .dll 的。暂时还没弄明白它是怎么加的
 - *【亲爱的表哥，这个世界上，只有一个活宝妹，这么心心恋恋，就是一定要嫁给亲爱的表哥！！！问世间情为何物，直教人生死相许。。亲爱的表哥，一个温暖的怀抱拥抱的魂力可真大呀，管了这如许多年！！这不，你的活宝妹为了这个温暖的怀抱拥抱，就是一定要嫁给亲爱的表哥！！不嫁就永远守候在亲爱的表哥的身边！！爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】*
 - 亲爱的表哥，活宝妹相信舅舅十岁闯江湖的阅历，活宝妹深深相信亲爱的表哥。活宝妹就是稳稳地永远守候在亲爱的表哥的身边！爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！
-  - 今天下午既然想不出来这个，就不要再被这个、再被厨房那个疯女人发疯干扰了。先去做别的。
--     
 - *ClientComponent* 参考项目组件：去看ET7 里客户端的 PlayerComponent.
 - 【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】今天下午先去看 Tractor 游戏源码，设计重构思路
 - 【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
@@ -2053,15 +2058,3 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 - 【拖拉机游戏房间】：多组件构成
 - 【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！爱表哥，爱生活！！！】
 - 【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
-
-
-
-
-
-
-
-
-
-
-
-
