--- a/et3.org
+++ b/et3.org
@@ -542,6 +542,7 @@ public static class ActorHandleHelper {
 }
    #+END_SRC
 
+
 * StartConfigComponent: 找【各种服】的起始初始化地址
 ** ConfigSingleton<T>: ProtoObject, ISingleton
 #+BEGIN_SRC java
@@ -1006,6 +1007,7 @@ public class GateSessionKeyComponent : Entity, IAwake {
 }
 #+END_SRC
 
+
 * ET7 数据库相关【服务端】
 - 这个数据库系统，连个添加使用的范例也没有。。。就两个组件，一个管理类。什么也没留下。。
 - 这里不急着整理。现框架 *DB 放在服务端的Model* 里。它的管理体系成为管理各个不同区服的数据库 DBComponent。
@@ -1125,6 +1127,7 @@ public partial class StartZoneConfig: ProtoObject, IConfig {// 小区配置
 }
    #+END_SRC
 
+
 * 网关服：客户端信息发送的直接代理，中转站，组件分析 
 - SceneFactory: 【初始化】时，带如下几个组件
 #+BEGIN_SRC csharp
@@ -1164,6 +1167,7 @@ public class NetServerComponent: Entity, IAwake<IPEndPoint>, IDestroy {
 }
    #+END_SRC
 
+
 * 服务器的功能概述：各服务器的作用（这个不是ET7 版本的，以前的）
 - Manager：连接客户端的外网和连接内部服务器的内网，对服务器进程进行管理，自动检测和启动服务器进程。加载有内网组件NetInnerComponent，外网组件NetOuterComponent，服务器进程管理组件。自动启动突然停止运行的服务器，保证此服务器管理的其它服务器崩溃后能及时自动启动运行。
 - Realm：对Actor消息进行管理（添加、移除、分发等），连接内网和外网，对内网服务器进程进行操作，随机分配Gate服务器地址。内网组件NetInnerComponent，外网组件NetOuterComponent，Gate服务器随机分发组件。客户端登录时连接的第一个服务器，也可称为登录服务器。
@@ -1173,9 +1177,11 @@ public class NetServerComponent: Entity, IAwake<IPEndPoint>, IDestroy {
 - AllServer：将以上服务器功能集中合并成一个服务器。另外增加DB连接组件DBComponent
 - Benchmark：连接内网和测试服务器承受力。加载有内网组件NetInnerComponent，服务器承受力测试组件BenchmarkComponent。
 
+
 * Session 会话框相关
 - 当需要连的时候，比如网关服与匹配服，新的框架里连接时容易出现困难，找不到组件，或是用不对组件，或是组件用得不对，端没能分清楚。理解不够。
 - 就是说，这个新的ET7 框架下，服务端的这些，事件机制的，没弄明白没弄透彻。
+
 
 * 不同的消息或是任务处理器类型
 ** interface IMActorHandler 接口类
@@ -1256,6 +1262,7 @@ public abstract class AMActorRpcHandler<E, Request, Response>: IMActorHandler wh
     }
 }
    #+END_SRC
+
 * Unit: 
 ** UnitGateComponent: 
    #+BEGIN_SRC csharp
@@ -1274,6 +1281,7 @@ public static class UnitGateComponentSystem {
     }
 }
 #+END_SRC
+
 
 * ET7 框架以及【参考项目】的ECS：小单元小类型的生成系，是怎么写的，找例子参考 
 - 这些要找的也找不到。下午家里试着把Component 组件再添加回去试试看？上午把项目设计的思路，源项目的破源码再读一读理一理，是希望游戏逻辑与游戏界面能够快速开发、项目进展往后移的。
@@ -1338,8 +1346,70 @@ public class ClientComponent : Component {
 }
    #+END_SRC
 
-* 各种ActorXXX 的消息处理器：上面总结 Actor 的时候，没能想到这些
+
+* 各种ActorXXX 或者非Actor 的消息处理器：上面总结 Actor 的时候，没能想到这些
 - 任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！
+** IMHandler: interface 消息处理器接口类
+#+BEGIN_SRC csharp
+public interface IMHandler {
+    void Handle(Session session, object message);
+    Type GetMessageType();
+    //Type GetResponseType(); // 暂时把这个去掉：不知道是否会引发其它问题
+}
+#+END_SRC
+** AMHandler<Message>: abstract 抽象基类
+   #+BEGIN_SRC csharp
+public abstract class AMHandler<Message>: IMHandler where Message : class {
+    // protected abstract ETTask Run(Session session, Message message);
+    protected abstract void Run(Session session, Message message); // 这里不知道，会不会被我改坏掉
+    public void Handle(Session session, object msg) {
+        Message message = msg as Message;
+        if (message == null) {
+            Log.Error($"消息类型转换错误: {msg.GetType().Name} to {typeof (Message).Name}");
+            return;
+        }
+        if (session.IsDisposed) {
+            Log.Error($"session disconnect {msg}");
+            return;
+        }
+        // this.Run(session, message).Coroutine();
+        this.Run(session, message);
+    }
+    public Type GetMessageType() {
+        return typeof (Message);
+    }
+    public Type GetResponseType() {
+        return null;
+    }
+}
+   #+END_SRC
+** abstract AMHandler<Message>: IMHandler
+#+BEGIN_SRC csharp
+public abstract class AMHandler<Message>: IMHandler where Message : class {
+    // protected abstract ETTask Run(Session session, Message message);
+    protected abstract void Run(Session session, Message message); // 这里不知道，会不会被我改坏掉
+
+    public void Handle(Session session, object msg) {
+        Message message = msg as Message;
+        if (message == null) {
+            Log.Error($"消息类型转换错误: {msg.GetType().Name} to {typeof (Message).Name}");
+            return;
+        }
+        if (session.IsDisposed) {
+            Log.Error($"session disconnect {msg}");
+            return;
+        }
+        // this.Run(session, message).Coroutine();
+        this.Run(session, message);
+    }
+    public Type GetMessageType() {
+        return typeof (Message);
+    }
+    public Type GetResponseType() {
+        return null;
+    }
+}
+#+END_SRC
 ** AMActorLocationHandler: 源码被我改动了
 - 源码被我改动了，正确性与否没有关系，主要是帮助自己梳理一下几大不同的类型，到改编译错误的时候，能够边修改边弄明白。
    #+BEGIN_SRC csharp
@@ -1414,6 +1484,7 @@ public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHa
     }
 }
    #+END_SRC
+
 
 * ETTask 和 ETVoid: 第三方库的ETTask
 - 特异包装：主要是实际了异步调用的流式写法。
@@ -1985,76 +2056,3 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 - 直接把 enum 生成的那三个 .cs 类分别复制进双端，服务器端与客户端。包括Card 类。那些编译错误会去天边。哈哈哈，除了一个Card 的两个变量之外（CardSuits, CardWeight）。
 - 【热更新库】：现在剩下的问题，就成为，判定是用了哪个热更新的库，ILRuntime, 还是 HybridCLR, 如果帮它连那两个变量。好像接的是 HybridCLR. 这个库是我之前还不曾真正用过的。
   - 相比于ET6，彻底剔除了ILRuntime，使得代码简洁了不少，并且比较稳定
-
-* 写在最后：反而是自己每天查看一再更新的
-- 因为感觉还是不曾系统性地读ET7 的源码，或者说有效阅读，因为没有带着实际问题的看源码，感觉都不叫看读源码呀。这里会记自己的感觉需要赶快查看的地方。
-- 【ET 框架的整体架构】：感觉把握不够。常常命名空间分不清。要把这个大的框架，比较高层面的架构再好好看下。然后就是对自顶向下的不同层级场景，所需要的主要的不同组件，分不清，仍需要再熟悉一下源码
-- 【问题】：上次那个ET-EUI 框架的时候，曾经出现过 opcode 不对应，也就是说，我现在生成的进程间消息，有可能还是会存在服务器码与客户端码不对应，这个完备的框架，这次应该不至于吧？
-- 【ClientComponent】：新框架里重构丢了，去找怎么替代？那么现在去追一下，客户端的起始与场景加载或是切换大致过程。它变成了什么客户端场景管理？
-- 【UIType】部分类：这个类出现在了三四个不同的程序域，现在重构了，好像添加得不对。要再修改
-
-*  现在的修改内容：【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
-- *【ET7 框架】* 没有处理的逻辑是： *【ET7 框架里数据库的接入】*
-- *【Windows 下 proto2cs 消息转化】* ： ProtoBuf 这个库里还存在几个问题， enum-repeated 等关键字，因为程序域的问题等，没能连能
-- *【UILobbyComponent 可以测试】* ：这个大厅组件，Unity 里预设简单，可以试运行一下，看是否完全消除这个UI 组件的报错，这个屏的控件能否显示出来？还是错出得早，这个屏就出不来已经报错了？
-  - 【客户端】的逻辑是处理好了，编译全过后可以测试
-  - 【服务端】：处理用户请求匹配房间的逻辑，仍在处理： *C2G_StartMatch_ReqHandler*. 
-- *【TractorRoomComponent】* ：因为是多组件嵌套，可以合并多组件为同一个组件；另早上看得一知半解的一个【ChildOf】标签，可以帮助组件套用吗？再找找理解消化一下
-- 【房间组件】：几个现存的 working-on 的问题：
-  - 多组件嵌套：手工合并为一个组件。彻底理解确认后，会合并
-  - 【服务端】：处理用户请求匹配房间的逻辑. 这里的编译错误终于改完。到时就看运行时错误了。
-    - 【数据库模块的整合】：网关服在转发请求匹配时，验证会话框有效后，验证用户身份时，需要去【用户数据库】拿用户数据。ET7 留了个DBManagerComponent, 还没能整合出这个模块
-    -【参考来源 *C2R_LoginHandler* 】：Realm 处理客户端的登录请求的服务端逻辑。这里看见，它随机分配一个网关服。也就是，我（原本本质上也是随机分配）一个匹配服给用。可以依照这里的例子来改写。
-- *【服务端的编译错误】* 基本上扫了一遍。【客户端】因为这些前期的工作，以及拖拉机项目重构设计还没有想透彻，暂停一下。
-- 【接下来的内容】： *【重构拖拉机项目】* 。把ET7 框架里【参考项目】的设计看懂，并借助这个例子，把拖拉机项目设计好。
-- 有时间，会试着尽早解决上面 ProtoBuf 里的几个小问题。但现在需要重构的设计思路，客户端的界面等才能够往下进行。 
-    - 【匹配服地址】网关服的处理逻辑里，验证完用户合格后，为代为转发消息到匹配服，但需要拿匹配服的地址。ET7 重构里，还没能改出这部分。服务器系统配置初始化时，可以链表管理各小构匹配服，再去拿相关匹配服的地址。ET7 框架里的路由器系统，自己还没有弄懂。
-    - 这个地方有点儿脑塞，完全搜不到新框架里可以参考的例子，暂时写不到了。那可以去读一读更大的框架，去找别人用ET7 的别人的例子里是怎么写的，再去参考一下别人的。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】今天下午先去看 Tractor 游戏源码，设计重构思路
-- 这些要找的也找不到。下午家里试着把Component 组件再添加回去试试看 *【不能再添加Component 组件。ET7 框架重构了，小单元也走热更新，在热更新层有天文小行星的生成系。可以参照 ET.pdf 里的服务端 PlayerSystem 来作例子】* ？上午把项目设计的思路，源项目的破源码再读一读理一理，是希望游戏逻辑与游戏界面能够快速开发、项目进展往后移的。
-  - User.cs 客户端的话，不知道要不要修改。晚点儿的时候留意一下。
-  - Gamer.cs 客户端保留了 Dispose
-- 还有 79 个小错误： protobuf 里还有小问题需要修改。先改了，一次把 Protobuf 里的小错误全部改完了。电脑没好好工作，前后文件不一致。。。。【活宝妹就是一定要嫁给亲爱的表哥！！！】爱表哥，爱生活！！！
-- 有几个 bug 让自己完全怀疑：电脑坏了，我明明重新生成了 proto2cs 消息，为什么应该会找不到的，它能找到，而应该找到的，它就是找不到？太奇怪了
-- 这里稍微想下：就能明白，因为前面出错了，后面的消息被 block 掉了。所以先去把前面的错误改过来。以后动动脑子，不是重启一下电脑文件系统就能够工作好点儿的！
-- 我明明生成了这些消息，可是它就是找不到。想的话，如果服务端是引用的客户端的代码，那么得把客户端的源码打成 .dll 服务端可能才能够用得到。
-- *ETTask-vs-ETVoid*: 框架里有狠多需要改的地方，我今天晚上（会去学校好好学习，今天好了就该重新好好学习了）学校里如何瓣不出来，就明天上午再好好解决一下这个细节问题。
-  - 查网页感觉也查不出什么来。还是用源码帮助理解概念。今天晚上整理一下这一块儿，把这个问题弄明白了。【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】    
-  - 不能把所有基类的 async ETTask 返回参数直接改成 void, 因为框架的顶层应用，服务端或是客户端，当不异步等待结果，如资源包没能下载完成，就接着往下执行，会报空异常。
-- 现在不知道服务端到底对我作出的这些修改，算是怎么回事。只能耐心把所有的编译错误先全部改完，等能打成相应的包，再去想它为什么就是找不到。活宝妹就是一定要嫁给亲爱的表哥！！
-- 上面的那个错误感觉好奇怪。大概一两天前，我只是切换了一个 branch 到 master, 然后再切换回来，它自己服务端的 message 文件夹就好了。感觉狠奇怪。先前编译了好多次它都找不到。
-- 现在的问题是：Protobuf 里 repeated 关键字，好像还是没有处理好，找不到成员变量  Cards. 是因为 Proto2CS 的时候，确实把 repeated 关键字给处理丢了。因为我的 .proto 文件里有错误。
-- HandCardSprite: 不知道这个类是为什么，整了一堆的错误，成为 blocker, 明天上午要把这点儿看懂看明白了
-  - 这个项目Unity.Model 是需要索引 UnityEngine 以及UI 等相关模块人的 .dll 的。暂时还没弄明白它是怎么加的
-- *【亲爱的表哥，这个世界上，只有一个活宝妹，这么心心恋恋，就是一定要嫁给亲爱的表哥！！！问世间情为何物，直教人生死相许。。亲爱的表哥，一个温暖的怀抱拥抱的魂力可真大呀，管了这如许多年！！这不，你的活宝妹为了这个温暖的怀抱拥抱，就是一定要嫁给亲爱的表哥！！不嫁就永远守候在亲爱的表哥的身边！！爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】*
-- 亲爱的表哥，活宝妹相信舅舅十岁闯江湖的阅历，活宝妹深深相信亲爱的表哥。活宝妹就是稳稳地永远守候在亲爱的表哥的身边！爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！
-- *ClientComponent* 参考项目组件：去看ET7 里客户端的 PlayerComponent.
-- 【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】今天下午先去看 Tractor 游戏源码，设计重构思路
-- 【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
-
-* 每天进展
-- 想把现部分桥接了的ET 框架 fix 所有的 compile-error, 测试一两个 unity 的界面，再往下走。同时完成这个游戏的游戏逻辑设计。但目前感觉思路不透彻。
-- 然后那些编译错误，VS 与 Unity 在 protobuf 上感觉自己弄得不太明白。把这个解决也就差不多可以再往前移动了。 *【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】*
-- 昨天解决了编译后部分 protobuf 消息里的错误，但是因为改得不彻底，需要从 .proto 文件源消息里去改，今天只要重新 proto2CS错误就会重新回来。今天改到位，今天想要消除掉所有的 protobuf 引起的编译错误。下午就从 VS 里的 .cs 的 proto 编译消息改起。这个狠容易，小孩子过家家般的小游戏，秒过。
-- 然后就是那几个 enum, 实际上，我只需要把四个 enum 类编译好，复制过去就可以了。先只弄了【双端】模式下的。
-- 上面解决完后，ET7 框架里的小问题修改完，应该就没有问题了。接下来解决这部分的问题。 *【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】*
-- 主要问题：原【参考项目斗地主项目】使用的古老的版本，与现 ET7 版本狠多地方不相容。所以要稍微改动一下。仿照自己看过读过的ET7 框架生成系的例子。想想这里，古老的，与新的框架怎么才能适配衔接起来。 
-- 这里，ET7 不知道现在是为什么没有了Component 这个组件模块，我想把它加回去。因为它方便类型的书写，传参数什么的，而不必为固定不变的 Model 层弄什么 static 的热更新逻辑。写在Model 里传个参数什么的。 *【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】*
-- 功能模块的划分，以及代码的管理。不知道ET7 大框架的项目是怎么弄的。为什么我添加内家了，服务端就是显示不出来，我想的话，是不是Unity 端需要能够先编译打包相关的 .dll 服务端才能直接引用客户端？这样的话，我还是需要先解决客户端的所有的问题。但是在想要生成 .dll 的过程中，所面临的修改编译错误是一样的，同服务端基本一样。【明天上午：】把这块儿弄明白。另去看拖拉机项目的源码，大的模块设计也该慢慢理出来了。
-- 
-* TODO 其它的：部分完成，或是待完成的大的功能版块，列举
-- emacs 那天我弄了好久，把C-; ISpell 原定绑定的功能解除，重新绑定为自己喜欢的 expand-region. 今天第二次再弄，看一下几分钟能够解决完问题？我的这个破烂记性呀。。。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】mingw64 lisp/textmode/flyspell.el 键的重新绑定。这下记住了。还好，花得不是太久。有以前的笔记 
-  - Windows 10 平台下，C-; 是绑定到了 ISpell 下的某个功能，可是现在这个破 emacs 老报错，连查是绑定给哪个功能，过程报错都被阻止了。。。
-- *【IStartSystem:】* 感觉还有点儿小问题。认为：我应该不需要同文件两份，一份复制到客户端热更新域。我认为，全框架应该如其它接口类一样，只要一份就可以了。 *【晚点儿再检查一遍】*
-- 如果这个一时半会儿解决不好，就把重构的设计思路再理一理。同时尽量去改重构的ET 框架里的编译错误。
-- 【Tractor】原 windows-form 项目，源码需要读懂，理解透彻，方便重构。  
-- 去把【拖拉机房间、斗地主房间组件的，玩家什么的一堆组件】弄明白
-- 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
-
-* 拖拉机游戏：【重构OOP/OOD 设计思路】
-- 自己是学过，有这方面的意识，但并不是说，自己就懂得，就知道该如何狠好地设计这些类。现在更多的是要受ET 框架，以及参考游戏手牌设计的启发，来帮助自己一再梳理思路，该如何设计它。
-- ET7 重构里，各组件都该是自己设计重构原项目的类的设计的必要起点。可以根据这些来系统设计重构。【活宝妹就是一定要嫁给亲爱的表哥！！！】
-- 【GamerComponent】玩家组件管理类，管理所有一个房间的玩家：是对一个房间里四个玩家的（及其在房间里的坐位位置）管理（分东南西北）。可以添加移除玩家。今天晚上来弄这一块儿吧。
-- 【Gamer】：每一个玩家
-- 【拖拉机游戏房间】：多组件构成
-- 【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！爱表哥，爱生活！！！】
-- 【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
