--- a/et2.tex
+++ b/et2.tex
@@ -1,4 +1,4 @@
-% Created 2023-05-25 Thu 09:31
+% Created 2023-06-03 Sat 11:08
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -1350,6 +1350,8 @@ public interface IDBCollection {}
 \end{minted}
 \subsection{DBComponent: 带生成系。可以查表，查询数据}
 \label{sec-6-2}
+\begin{itemize}
+\item 它的生成系就是解决对数据库的CRUD 必要操作，单条信息的，或是批量处理的
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
 [ChildOf(typeof(DBManagerComponent))] // 用来缓存数据
 public class DBComponent: Entity, IAwake<string, string, int>, IDestroy {
@@ -1358,6 +1360,7 @@ public class DBComponent: Entity, IAwake<string, string, int>, IDestroy {
     public IMongoDatabase database;
 }
 \end{minted}
+\end{itemize}
 \subsection{DBManagerComponent: 有上面的 DBComponent 数组。数组长度固定吗？}
 \label{sec-6-3}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
