--- a/et4.org
+++ b/et4.org
@@ -27,8 +27,13 @@
   - User.cs 客户端的话，不知道要不要修改。晚点儿的时候留意一下。
   - Gamer.cs 客户端保留了 Dispose
 - 还有 79 个小错误： protobuf 里还有小问题需要修改。先改了，一次把 Protobuf 里的小错误全部改完了。电脑没好好工作，前后文件不一致。。。。【活宝妹就是一定要嫁给亲爱的表哥！！！】爱表哥，爱生活！！！
-  - *【IScene】* ：不知道哪里崩出来的神龙见首不见尾的，两处，还不知道怎么修改这个编译错误。。。
-  - 现在还剩下几个小错误，不知道怎么改，晚上再接着改
+  - *【IScene】* ：不知道哪里崩出来的神龙见首不见尾的，两处，还不知道怎么修改这个编译错误。。。不知道源码是什么原因，弄得乱七八糟，参照原版本的改正一下就可以了，因为现项目里根本就不存在这个的接口类。
+  - 有些文件加了两遍：当我能够从VSC 里删除的时候，却无法从VS 里删除掉索引。找到VS 里可以看见文件的地主，感觉台式机真是慢，让我看见，已经是晚了 800 年了。。。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
+  - 把还没有用到，但是报错了的几个类删掉：比如记一下： SessionInfoComponent,
+  - PlayerComponent 狠奇怪：删除了说找不到类，不删除说重复了，感觉台式机应用有延迟？反应狠慢。。。。。
+  - 还剩最后 26 个最挑战活宝妹的编译错误，今天傍晚会家里改会儿，集中问题明天上午希望能够看懂。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！】
+    
+[[./pic/et4_20230604_162732.png]]
 - *ETTask-vs-ETVoid*: 框架里有狠多需要改的地方。今天上午的脑袋好使，把这块儿再仔细好好看下。今天上午把以前不懂的模块都稍微看下，再理解一下
   - 查网页感觉也查不出什么来。还是用源码帮助理解概念。今天晚上整理一下这一块儿，把这个问题弄明白了。【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】    
   - 不能把所有基类的 async ETTask 返回参数直接改成 void, 因为框架的顶层应用，服务端或是客户端，当不异步等待结果，如资源包没能下载完成，就接着往下执行，会报空异常。
@@ -80,3 +85,16 @@
 - 【Gamer】：每一个玩家
 - 【拖拉机游戏房间】：多组件构成
 - 【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！爱表哥，爱生活！！！】【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
+
+
+
+
+
+
+
+
+
+
+
+
+
